--- a/package.json
+++ b/package.json
@@ -1,21 +1,25 @@
 {
   "name": "parcel",
   "version": "1.0.0",
-  "description": "osef",
+  "description": "",
   "main": "index.js",
-  "node-sass": "^4.7.2",
-  "parcel-bundler": "^1.6.2",
+  "author": "Andy",
+  "license": "ISC",
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.js"
   },
-  "repository": {
-    "type": "git",
-    "url": ""
+  "depencies": {
+    "node-sass": "^4.7.2",
+    "parcel-bundler": "^1.6.2"
   },
-  "author": "",
-  "license": "ISC",
+  "devDependencies": {
+    "autoprefixer": "^8.0.0",
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "node-sass": "^4.7.2"
+  },
   "dependencies": {
-    "autoprefixer": "^8.0.0"
+    "flexboxgrid": "^6.3.1"
   }
 }
